Clean up repository: Update .gitignore and remove non-project files
- Enhanced .gitignore to exclude:
  - Virtual environments (venv_*, test_env/)
  - Build artifacts (build/, dist/, *.egg-info/)
  - Testing artifacts (htmlcov/, .coverage, etc.)
  - Cache directories (.mypy_cache/, .pytest_cache/)
  - Wiki and documentation build files
  - Security/CI reports (bandit-report.json, github_actions_status.json)
  - IDE-specific files and user tool workflows

- Removed tracked files that shouldn't be in public repo:
  - test_env/ directory
  - GitHub Pages config files (_config.yml, index.html)
  - CI/security report files
  - User-specific GitHub workflow (claude.yml)

This cleanup makes the repository cleaner and more professional for public use.

--- a/.gitignore
+++ b/.gitignore
@@ -150,7 +150,8 @@ cache/
 logs/
 *.mp3
 *.jpg
-*.pngtest_output/
+*.png
+test_output/
 package_build_env/
 test_environment/
 
@@ -190,10 +191,50 @@ fix_logging.py
 *_REPORT.md
 *_INVENTORY.md
 *_SUMMARY.md
-venv_security/
 
+# Virtual environments
+venv_security/
 venv_docs/
+venv_publish/
+test_env/
+
+# Wiki and documentation build artifacts
 wiki-repo/
 wiki_update/
-venv_publish/
+wiki/
 .jekyll-metadata
+_config.yml
+index.html
+
+# Security and CI reports
+bandit-report.json
+github_actions_status.json
+
+# Testing artifacts
+htmlcov/
+.coverage
+.coverage.*
+coverage.html
+coverage.json
+
+# Build artifacts
+build/
+dist/
+*.egg-info/
+src/*.egg-info/
+
+# Cache directories
+.mypy_cache/
+.pytest_cache/
+.tox/
+.nox/
+
+# Example output and demos
+podcast_previews/
+
+# IDE and tool configs that shouldn't be in public repo
+.cursorrules
+copilot-instructions.md
+
+# GitHub workflows added by user tools
+.github/workflows/claude.yml
